2.2.13

 *) Apache 2.0 support.

 *) [WIN32] Don't read from a potentially closed named pipe. 
    Philip Gladstone [philip@okena.com]

 *) Require the Apache version 1.3.6 or later to eliminate some signal
    handling funk.

 *) [WIN32] Use asyncronous io with named pipes instead of polled
    nonblocking io.  This should eliminate the last of the npipe issues.

 *) Handle an application returning a complete and valid response without 
    having consumed all of the data sent to it.

 *) Consume remaining client data (RESPONDERs only) if any.

 *) Add support for backing off attempts to start applications that continuously
    fail to start.  Three new macros defined in mod_fastcgi.h control this 
    behaviour: MAX_FAILED_STARTS, RUNTIME_SUCCESS_INTERVAL, FAILED_STARTS_DELAY

 *) [WIN32] Add (back) support for use of TerminateProcess() to accomodate
    applications that do not (properly) support the shutdown event (this
    feature was introduced in fcgi2 2.2.2 and improved in 2.2.4).  The 
    new macro WIN32_SHUTDOWN_GRACEFUL_WAIT in mod_fastcgi.h conrols the 
    interval between signaling a proper shutdown and wacking the process(s)
    with a TerminateProcess().

 *) [WIN32] Don't set the OVERLAPPED_IO flag on NamedPipe listen HANDLEs - 
    setting it was just plain broken.

 *) [WIN32] Fix the accept mutex - all applications were sharing one!? 

 *) Fix 'FastCgiConfig -autoUpdate'.

 *) Fix 'FastCgiConfig -flush'.

 *) Prevent silly maxProcesses and processSlack combinations.
    Dmitry Dorofeev [dima@yasp.com]
                                                               
 *) Properly handle the killing of idle processes when one takes a long time
    to exit once signaled down (or the config is funky).
    Dmitry Dorofeev [dima@yasp.com]

 *) Always kill the youngest instance of an application.  Suggested by 
    Dmitry Dorofeev [dima@yasp.com]

2.2.12

 *) Delay the logging of write errors to the pm to account for shutdown/restart.
